# taxi_rides_ny_duckdb

./: .gitignore  .user.yml  README.md  dbt_project.yml  package-lock.yml  profiles.yml  pyproject.toml  setup  summary.md
models/core/: dim_monthly_zone_statistics.sql  dim_zones.sql  dm_monthly_zone_revenue.sql  dm_monthly_zone_statistics.sql  dm_monthly_zone_stats.sql  fact_fhv_trips.sql  fact_trips.sql  schema.yml
models/staging/: schema.yml  stg_fhv_trips.sql  stg_green_tripdata.sql  stg_yellow_tripdata.sql
