[tool.poetry]
name = "taxi-rides-ny-duckdb"
version = "0.1.0"
description = ""
authors = ["lisallreiber <lisallreiber@gmail.com>"]
readme = "README.md"
packages = [{include = "taxi_rides_ny_duckdb"}]

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "^1.4.5"
dbt-duckdb = "^1.4.1"
piperider = {extras = ["duckdb"], version = "^0.21.0"}
duckdb = "0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
